<resources>
    <string name="app_name">CCCoach</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="poor_internet_connection">Poor internet connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_less">See Less</string>
    <string name="see_more_dots">...See More</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="or">OR</string>
    <string name="ticket_id"> Ticket ID-001 </string>
    <string name="Closed"> Closed </string>
    <string name="success_msg">Success</string>
    <string name="soemthing_went_wrong">Somethong went wrong</string>
    <string name="dummy_text">Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_as_a_coach">Sign up as a coach</string>
    <string name="sign_up_as_a_learner_driver">Sign up as a learner driver</string>
    <string name="welcome">WELCOME!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="continue_to_accout">Continue to accout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">I don’t have an account? Sign up</string>
    <string name="ll">"     "</string>
    <string name="favourites">Favorites</string>
    <string name="contact_us">Contact us</string>
    <string name="faqs">FAQs</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="Subject"> Subject </string>
    <string name="Mobile_Number"> Mobile Number </string>
    <string name="phone_number"> 126799876 </string>
    <string name="Last_Message"> Last Message </string>
    <string name="lorem_ipsum_dummy">Lorem ipsum dummy</string>
    <string name="lorem_ipsum_is_a_placeholder">Lorem ipsum is a placeholder text commonly used to demonstrate the visual form</string>
    <string name="time2">10 AM - 2 AM</string>
    <string name="time3">5 AM - 7 AM</string>
    <string name="generated_ticket"> Generated tickets </string>
    <string name="create_new_ticket"> +Create New Ticket </string>
    <string name="nsw_driver_licenece_number">NSW Driver\'s Licence Number</string>
    <string name="address">Address</string>
    <string name="Atsi">ATSI (Aboriginal and Torres Strait Islander\n Identification)</string>
    <string name="i_agree">I agree with the  Terms Conditions &amp;\n Privacy Policy</string>
    <string name="name">Name</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgot_password_message">Don’t worry! happens. Please enter your registered email id and e will send you a temporary password</string>
    <string name="rate"> Rate </string>
    <string name="Frequently_asked_questions"> Frequently asked questions </string>
    <string name="search"> Search </string>
    <string name="Type"> Type </string>
    <string name="date"> 12/04/2023 </string>
    <string name="select"> Select Date </string>
    <string name="Select_Distance_Range"> Select Distance Range </string>
    <string name="Select_time_Range"> Select Time Range </string>
    <string name="FAQs"> FAQs </string>
    <string name="terms_condition"> Terms &amp; Conditions </string>
    <string name="find_coaches"> Find Coaches </string>
    <string name="find_a_coache"> Find a coach </string>
    <string name="browser_coaches"> Browse all coaches </string>
    <string name="tap_to_login">Tap to login with Touch ID</string>
    <string name="verification_code">Enter verifiction code</string>
    <string name="continu">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_as_a_coach">Sign up as a coach</string>
    <string name="signup_as_a_learner">sign up as a learner driver</string>
    <string name="verification">Verification  </string>
    <string name="new_Password">New password </string>
    <string name="enter_device_password">Enter device password </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="success">Success !</string>
    <string name="create_successfully">Your account has been created successfully </string>
    <string name="touch_id"> No Touch ID/ Passcode</string>
    <string name="touch_passcode">is available</string>
    <string name="volunteer">Volunteer</string>
    <string name="paid">Paid</string>
    <string name="closed_ticket">Closed Ticket</string>
    <string name="admin"> Admin </string>
    <string name="notification"> Notifications </string>
    <string name="terms"> Terms </string>
    <string name="Murad"> Murad </string>
    <string name="characters">At least 6 alphanumeric characters</string>
    <string name="passwordnum">•••••••••••</string>
    <string name="country">Country</string>
    <string name="wwc_number">WWC Number</string>
    <string name="conditions"> Conditions </string>
    <string name="notification_message"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley. </string>
    <string name="receive_msg">Hello Faze Lorem Ipsum is simply dummy text of the printing and typesetting</string>
    <string name="terms_first"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard  text ever since the 1500s</string>
    <string name="terms_two"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard  text ever since the 1500s</string>
    <string name="when_do_you_want_your_lesson">When do you want your lesson</string>
    <string name="done">Done</string>
    <string name="_9_00_am_11_00_pm">9:00 AM-11:00 PM</string>

    <string name="logo">LOGO</string>
    <string name="find_a_coach">Find a Coach</string>
    <string name="accelerate_your_driving_skills_with_a_professional_coach_by_your_side">Accelerate your driving skills \nwith a professional coach by \nyour side.</string>
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="appointment">Appointment</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="coach_list">Coach List</string>
    <string name="my_requests">My Requests</string>
    <string name="accepted">Accepted</string>
    <string name="coaches">Coaches</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="atsi">ATSI</string>
    <string name="coach_name">Coach Name</string>
    <string name="time_range">Time Range</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pending">Pending</string>
    <string name="declined">Declined</string>
    <string name="completed">Completed</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_3_month">Last 3 Month</string>
    <string name="_2023">2023</string>
    <string name="_2022">2022</string>
    <string name="reset">Reset</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="available">Available</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="offline">Offline</string>
    <string name="completed_requests">Completed Requests</string>

    <string name="John_Smith"> John Smith </string>
    <string name="edit_personal_info"> Edit personal info </string>
    <string name="Average_ratings"> Average ratings </string>
    <string name="email">Email </string>
    <string name="appointment_Date">Appointment Date </string>
    <string name="appointment_date"> Wed, 12/04/20023 </string>
    <string name="appointment_status"> Appointment Status </string>
    <string name="rating_avarded"> Rating Avarded </string>
    <string name="age">Age </string>
    <string name="age_digit">56 </string>
    <string name="email_address"> abc@gmail.com </string>
    <string name="eamil_addresofProfile"> Email address </string>
    <string name="Time_text"> Time </string>
    <string name="Johnson_Smith"> Johnson Smith </string>
    <string name="address_text"> Lorem ipsum is a placeholder text commonly\n used to demonstrate </string>
    <string name="full_name"> Full name </string>
    <string name="license_number"> NSW Driver’s License Number </string>
    <string name="license_number_digit"> 1234578 </string>
    <string name="atsi_identifiction"> ATSI identification </string>
    <string name="post_booking"> Past Booking </string>
    <string name="atsi_identifiction_digit"> XXXXXXXX </string>
    <string name="Time_text_hours"> 03:00 PM to 04:00 PM (1 Hour) </string>
    <string name="your_review"> Your review </string>
    <string name="review_message">Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. </string>
    <string name="upadte"> Update </string>
    <string name="Available"> Available </string>
    <string name="rating_number"> 4.0 </string>
    <string name="rating_number_in_braket"> (130)</string>
    <string name="wwc_numbers"> WWC11111AZ </string>
    <string name="license_numbers"> NSW Driver’s License  </string>
    <string name="ATSI"> ATSI  </string>
    <string name="review"> Review  </string>
    <string name="persons_name"> Steffan  </string>
    <string name="book_an_appointment"> Book an appointment  </string>
    <string name="DOB"> DOB  </string>
    <string name="Date_of_birth"> 15-02-2002  </string>
    <string name="timing1"> 8 AM - 9 AM </string>
    <string name="timing2"> 9 AM - 10 AM </string>
    <string name="timing3"> 10 AM - 11 AM </string>
    <string name="timing4"> 11 AM - 12 PM </string>
    <string name="timing5"> 12 PM - 1 PM </string>
    <string name="timing6"> 01 PM - 2 PM </string>
    <string name="timing7"> 02 PM - 3 PM </string>
    <string name="timing8"> 02 PM - 3 PM </string>
    <string name="timing9"> 03 PM - 4 PM </string>
    <string name="timing10"> 04 PM - 5 PM </string>
    <string name="timing11"> 05 PM - 6 PM </string>
    <string name="timing12"> 06 PM - 7 PM </string>
    <string name="change_password"> Change Password </string>
    <string name="old_password"> Old Password </string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="aboutus"> About us </string>
    <string name="privacy"> Privacy  </string>
    <string name="policy"> Policy  </string>
    <string name="ratecoach"> Rate Coach  </string>

    <string name="save"> Save  </string>
    <string name="write_review">Write review</string>

    <string name="calendar_sunday">Sun</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thu</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday">Sat</string>
    <string name="search_appointments">Search Appointments</string>
    <string name="not_available">Not Available</string>
<!--    <string name="save">Save</string>-->


</resources>