<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCalendar1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_sunday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/tvCalendar2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_monday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/tvCalendar3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_tuesday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/tvCalendar4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_wednesday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/tvCalendar5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_thursday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/tvCalendar6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_friday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/tvCalendar7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_saturday"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

    </LinearLayout>
</layout>