<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:background="@drawable/round_cornor_ticket_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="wrap_content"
                android:textColor="#082562"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/ticket_id"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="end"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Closed"/>


            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/right_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Subject"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#545454"
                android:gravity="end"
                android:textSize="@dimen/_9sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lorem_ipsum_dummy"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Last_Message"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="wrap_content"
                android:textColor="#545454"
                android:gravity="end"
                android:textSize="@dimen/_9sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lorem_ipsum_is_a_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Mobile_Number"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#545454"
                android:gravity="end"
                android:textSize="@dimen/_9sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/phone_number"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15ssp">

        </View>

    </LinearLayout>

</RelativeLayout>