<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handleClick"
            type="com.cccoach.utils.HandleClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/imgeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_shape"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15ssp"
                android:src="@drawable/car_img"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/John_Smith"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Average_ratings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="5"
                    android:rating="3.9"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:theme="@style/RatingBar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1.2"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/age"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1.2"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="@string/age_digit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="0.9"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/appointment"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="@string/appointment_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Time_text"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1.4"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="@string/Time_text_hours"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="0.9"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/appointment_status"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="@string/completed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_9ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/rating_avarded"
                    android:textSize="@dimen/_12ssp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2">

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingbar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="3.9"
                        android:scaleX=".7"
                        android:scaleY=".7"
                        android:stepSize="0.1"
                        android:theme="@style/RatingBar" />
                </FrameLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/your_review"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/review_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/review_received"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/review_message" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"/>

        </LinearLayout>

    </LinearLayout>
</layout>