<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handleClick"
            type="com.cccoach.utils.HandleClickListener" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/car_img">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/whitelogo"
            android:layout_alignParentTop="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dummytextTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/dummy_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:layout_marginBottom="@dimen/_35sdp"                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/coachSignupTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rect"
                android:gravity="center"
                android:onClick="@{(view)->handleClick.onViewClick(view)}"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/sign_up_as_a_coach"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/learnerSignupTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_rect"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:onClick="@{(view)->handleClick.onViewClick(view)}"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/sign_up_as_a_learner_driver"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textSize="@dimen/_13ssp"
                />

        </LinearLayout>


    </RelativeLayout>





</layout>


